--- a/frontEnd/frontend/src/styles/App.css
+++ b/frontEnd/frontend/src/styles/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  height: 100vh; /* Adicionar altura para preencher a tela */
+  margin: 0; /* Remover margem para preencher a tela */
+  padding: 0; /* Remover preenchimento para preencher a tela */
+  display: flex; /* Adicionar display flex para centralizar o conteúdo */
+  flex-direction: column; /* Adicionar direção de coluna para centralizar o conteúdo */
+  align-items: center; /* Adicionar alinhamento de itens para centralizar o conteúdo */
+  justify-content: center; /* Adicionar justificativa de conteúdo para centralizar o conteúdo */
 }
 
 .App-logo {
@@ -15,7 +22,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 100vh; /* Adicionar altura para preencher a tela */
   display: flex;
   flex-direction: column;
   align-items: center;
